syntax = "proto3";

//从执行protoc这个命令的当前目录开始算起
import "user.proto";
import "google/protobuf/any.proto";

option go_package = "../service";

package service;


// 定义request model
message ProductRequest{
  int32 prod_id = 1; // 1代表顺序
}

message Content {
  string msg = 1;
}

// 定义response model
message ProductResponse{
  int32 prod_stock = 1;   //  1代表顺序
  User user = 2;
  google.protobuf.Any data = 3;
}

// 定义服务主题
service ProdService{
  // 定义方法
  rpc GetProductStock(ProductRequest) returns (ProductResponse);
}


